Updated flight service by reading and writing data from folder